Swap webpack for parcel

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -23,7 +23,7 @@
         <progress></progress>
     </div>
     <div style="display:none">
-        <script src="/dist/bundle.js"></script>
+        <script src="./index.tsx"></script>
     </div>
 </body>
 
